[project]
name = "doclify"
version = "0.2.1"
description = "AI-powered documentation generator for Python projects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU AFFERO GENERAL PUBLIC LICENSE"}
authors = [
  {name = "Hema Kalyan", email = "mhemakalyan@gmail.com"}
]

dependencies = [
    "click",
    "google-genai",
    "pathspec>=1.0.3",
    "pyyaml",
    "rich",
    "twine>=6.2.0",
]

[project.urls]
Repository = "https://github.com/KalyanM45/Doclify"
Issues = "https://github.com/KalyanM45/Doclify/issues"

[project.scripts]
doclify = "doclify.pipelines.supervisor:cli"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["doclify*"]

[tool.setuptools.package-data]
"doclify" = ["resources/*.gitignore"]
